Fix typo in southern translation key (Japanese)

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -8,7 +8,7 @@
         "Already Caught": "捕獲済み",
         "Made By": "製作：<a href=\"http://sawyerhood.com\">Sawyer Hood</a> | 翻訳：Julien Humbert | ",
         "Northern": "北半球",
-        "Soutern": "南半球",
+        "Southern": "南半球",
         "Fish": "魚",
         "Bugs": "虫",
         "Fossils": "化石",
