Add Art FR translation

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -287,6 +287,50 @@
     "Tricera skull": "Crâne de tricératops",
     "Tricera torso": "Corps de tricératops",
     "Tricera tail": "Queue de tricératops",
-    "Trilobite": "Trilobite"
+    "Trilobite": "Trilobite",
+    "Art": "Œuvre",
+    "Academic painting": "Toile académique",
+    "Amazing painting": "Toile incroyable",
+    "Basic painting": "Toile classique",
+    "Calm painting": "Toile apaisante",
+    "Common painting": "Toile commune",
+    "Dynamic painting": "Toile déferlante",
+    "Detailed painting": "Toile détaillée",
+    "Famous painting": "Toile célèbre",
+    "Glowing painting": "Toile crépusculaire",
+    "Flowery painting": "Toile florale",
+    "Graceful painting": "Toile gracieuse",
+    "Jolly painting": "Toile potagère",
+    "Mysterious painting": "Toile ténébreuse",
+    "Moody painting": "Toile puissante",
+    "Moving painting": "Toile émouvante",
+    "Nice painting": "Toile magnifique",
+    "Perfect painting": "Toile parfaite",
+    "Proper painting": "Toile austère",
+    "Quaint painting": "Toile charmante",
+    "Scary painting": "Toile effrayante",
+    "Scenic painting": "Toile hivernale",
+    "Serene painting": "Toile royale",
+    "Sinking painting": "Toile tragique",
+    "Solemn painting": "Toile solennelle",
+    "Twinkling painting": "Toile scintillante",
+    "Warm painting": "Toile radieuse",
+    "Wild painting Left Half": "Toile sauvage (partie gauche)",
+    "Wild painting Right Half": "Toile sauvage (partie droite)",
+    "Wistful painting": "Toile nacrée",
+    "Worthy painting": "Toile précieuse",
+    "Ancient statue": "Statue antique",
+    "Beautiful statue": "Statue féminine",
+    "Familiar statue": "Statue pensive",
+    "Gallant statue": "Statue majestueuse",
+    "Great statue": "Statue imposante",
+    "Informative statue": "Tablette édifiante",
+    "Motherly statue": "Statue maternelle",
+    "Mystic statue": "Sculpture mystérieuse",
+    "Robust statue": "Statue athlétique",
+    "Rock-head statue": "Sculpture déterminée",
+    "Tremendous statue": "Sculpture singulière",
+    "Valiant statue": "Statue héroïque",
+    "Warrior statue": "Statue guerrière"
   }
 }
