Add Art JA translation

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -287,6 +287,50 @@
         "Tricera skull": "トリケラトプスのあたま",
         "Tricera torso": "トリケラトプスのからだ",
         "Tricera tail": "トリケラトプスのしっぽ",
-        "Trilobite": "さんようちゅう"
+        "Trilobite": "さんようちゅう",
+        "Art": "美術品",
+        "Academic painting": "アカデミックなめいが",
+        "Amazing painting": "すごいめいが",
+        "Basic painting": "いさましいめいが",
+        "Calm painting": "おだやかなめいが",
+        "Common painting": "よくみるめいが",
+        "Dynamic painting": "いきなめいが",
+        "Detailed painting": "ちみつなめいが",
+        "Famous painting": "ゆうめいなめいが",
+        "Glowing painting": "ひかりのめいが",
+        "Flowery painting": "たぐいまれなるめいが",
+        "Graceful painting": "しなやかなめいが",
+        "Jolly painting": "おもしろいめいが",
+        "Mysterious painting": "なぞめいためいが",
+        "Moody painting": "ちからづよいめいが",
+        "Moving painting": "きれいなめいが",
+        "Nice painting": "いいめいが",
+        "Perfect painting": "すばらしいめいが",
+        "Proper painting": "にぎやかなめいが",
+        "Quaint painting": "おちついためいが",
+        "Scary painting": "いなせなめいが",
+        "Scenic painting": "みごとなめいが",
+        "Serene painting": "たおやかなめいが",
+        "Sinking painting": "しずみゆくめいが",
+        "Solemn painting": "おごそかなめいが",
+        "Twinkling painting": "またたくめいが",
+        "Warm painting": "いいかんじのめいが",
+        "Wild painting Left Half": "あらぶるめいがのひだり",
+        "Wild painting Right Half": "あらぶるめいがのみぎ",
+        "Wistful painting": "すてきなめいが",
+        "Worthy painting": "かちのあるめいが",
+        "Ancient statue": "いにしえのちょうこく",
+        "Beautiful statue": "うつくしいちょうこく",
+        "Familiar statue": "なじみのあるちょうこく",
+        "Gallant statue": "りりしいちょうこく",
+        "Great statue": "いだいなちょうこく",
+        "Informative statue": "てがかりのちょうこく",
+        "Motherly statue": "ぼせいあふれるちょうこく",
+        "Mystic statue": "しんぴてきなちょうこく",
+        "Robust statue": "たくましいちょうこく",
+        "Rock-head statue": "いしあたまなちょうこく",
+        "Tremendous statue": "とてつもないちょうこく",
+        "Valiant statue": "こうごうしいちょうこく",
+        "Warrior statue": "もののふのちょうこく"
     }
 }
