Fix art category name

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -288,7 +288,7 @@
     "Tricera torso": "Corps de tricératops",
     "Tricera tail": "Queue de tricératops",
     "Trilobite": "Trilobite",
-    "Art": "Œuvre",
+    "Art": "Œuvres d’art",
     "Academic painting": "Toile académique",
     "Amazing painting": "Toile incroyable",
     "Basic painting": "Toile classique",
