Add FR translation with Music

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -331,6 +331,105 @@
     "Rock-head statue": "Sculpture déterminée",
     "Tremendous statue": "Sculpture singulière",
     "Valiant statue": "Statue héroïque",
-    "Warrior statue": "Statue guerrière"
+    "Warrior statue": "Statue guerrière",
+    "Music": "Chansons",
+    "By concert request only": "Par demande de concert uniquement",
+    "By concert request only (on birthday, or Saturday before)": "Par demande de concert uniquement (le jour de l'anniversaire ou le samedi précédent)",
+    "Gifted at first concert": "Doué lors du premier concert",
+    "Agent K.K.": "Agent Kéké",
+    "Aloha K.K.": "Ukulélé Kéké",
+    "Animal City": "À nous la belle ville",
+    "Bubblegum K.K.": "Bubblegum Kéké",
+    "Café K.K.": "Kéké café",
+    "Comrade K.K.": "Tovaritch Kéké",
+    "DJ K.K.": "DJ Kéké",
+    "Drivin'": "Sur la route",
+    "Farewell": "Adieux",
+    "Forest Life": "Vie de forêt",
+    "Go K.K. Rider": "Kéké route 66",
+    "Hypno K.K.": "Psykéké",
+    "I Love You": "Je vous aime",
+    "Imperial K.K.": "Kéké l’Empereur",
+    "K.K. Adventure": "Kéké star",
+    "K.K. Aria": "Aria de Kéké",
+    "K.K. Ballad": "Ballade de Kéké",
+    "K.K. Bazaar": "Kéké bohème",
+    "K.K. Birthday": "Anniversaire Kéké",
+    "K.K. Blues": "Kéké blues",
+    "K.K. Bossa": "Bossa de Kéké",
+    "K.K. Calypso": "Calypso Kéké",
+    "K.K. Casbah": "Cheb Kéké",
+    "K.K. Chorale": "Chorale de Kéké",
+    "K.K. Condor": "El Condor Kéké",
+    "K.K. Country": "Country Kéké",
+    "K.K. Cruisin'": "Kéké R&B",
+    "K.K. D&B": "Drum & bass Kéké",
+    "K.K. Dirge": "Requiem de Kéké",
+    "K.K. Disco": "Disco Kéké",
+    "K.K. Dixie": "Kéké Dixie",
+    "K.K. Étude": "Étude de Kéké",
+    "K.K. Faire": "Virelai Kéké",
+    "K.K. Flamenco": "Flamenco Kéké",
+    "K.K. Folk": "Folk Kéké",
+    "K.K. Fusion": "Fusion Kéké",
+    "K.K. Groove": "Groove Kéké",
+    "K.K. Gumbo": "Gumbo Kéké",
+    "K.K. House": "Kéké House",
+    "K.K. Island": "Kéké des îles",
+    "K.K. Jazz": "Jazz de Kéké",
+    "K.K. Jongara": "Shamisen Kéké",
+    "K.K. Lament": "Complainte kéké",
+    "K.K. Love Song": "Romance Kéké",
+    "K.K. Lullaby": "Berceuse de Kéké",
+    "K.K. Mambo": "Mambo de Kéké",
+    "K.K. Marathon": "Kéké marathon",
+    "K.K. March": "Marche de Kéké",
+    "K.K. Mariachi": "Mariachi kéké",
+    "K.K. Metal": "Kéké metal",
+    "K.K. Milonga": "Milonga Kéké",
+    "K.K. Moody": "Slow Kéké",
+    "K.K. Oasis": "Maharadjah Kéké",
+    "K.K. Parade": "Kéké académie",
+    "K.K. Ragtime": "Ragtime Kéké",
+    "K.K. Rally": "Parade Kéké",
+    "K.K. Reggae": "Reggae de Kéké",
+    "K.K. Rock": "Rock Kéké",
+    "K.K. Rockabilly": "Rockabilly Kéké",
+    "K.K. Safari": "Ali Farka Kéké",
+    "K.K. Salsa": "Salsa de Kéké",
+    "K.K. Samba": "Samba de Kéké",
+    "K.K. Ska": "Ska Kéké",
+    "K.K. Sonata": "Sonate Kéké",
+    "K.K. Song": "Rengaine de Kéké",
+    "K.K. Soul": "Soul de Kéké",
+    "K.K. Steppe": "Kéké balalaïka",
+    "K.K. Stroll": "Flânerie Kéké",
+    "K.K. Swing": "Swing de Kéké",
+    "K.K. Synth": "Synthé Kéké",
+    "K.K. Tango": "Tango de Kéké",
+    "K.K. Technopop": "Technopop Kéké",
+    "K.K. Waltz": "Valse de Kéké",
+    "K.K. Western": "Far West Kéké",
+    "King K.K.": "Kéké King",
+    "Lucky K.K.": "Kéké le verni",
+    "Marine Song 2001": "Chant marin",
+    "Mountain Song": "Chant Montagnard",
+    "Mr. K.K.": "M. Kéké",
+    "My Place": "Chez moi",
+    "Neapolitan": "Napolitaine",
+    "Only Me": "Moi et juste moi",
+    "Pondering": "Réfléchir",
+    "Rockin' K.K.": "Bouge avec Kéké",
+    "Soulful K.K.": "Kéké soul",
+    "Space K.K.": "Space Kéké",
+    "Spring Blossoms": "Floraison",
+    "Stale Cupcakes": "Vieux biscuits",
+    "Steep Hill": "La pente",
+    "Surfin' K.K.": "Kéké à la plage",
+    "The K. Funk": "Le Kéké Funk",
+    "To the Edge": "Limite",
+    "Two Days Ago": "2 jours plus tôt",
+    "Wandering": "Errance",
+    "Welcome Horizons": "Horizons nouveaux"
   }
 }
