Fix some FR translations

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -333,9 +333,9 @@
     "Valiant statue": "Statue héroïque",
     "Warrior statue": "Statue guerrière",
     "Music": "Chansons",
-    "By concert request only": "Par demande de concert uniquement",
-    "By concert request only (on birthday, or Saturday before)": "Par demande de concert uniquement (le jour de l'anniversaire ou le samedi précédent)",
-    "Gifted at first concert": "Doué lors du premier concert",
+    "By concert request only": "Sur demande de concert uniquement",
+    "By concert request only (on birthday, or Saturday before)": "Sur demande de concert uniquement (jour de l’anniversaire ou samedi précédent)",
+    "Gifted at first concert": "Donné lors du premier concert",
     "Agent K.K.": "Agent Kéké",
     "Aloha K.K.": "Ukulélé Kéké",
     "Animal City": "À nous la belle ville",
@@ -413,7 +413,7 @@
     "King K.K.": "Kéké King",
     "Lucky K.K.": "Kéké le verni",
     "Marine Song 2001": "Chant marin",
-    "Mountain Song": "Chant Montagnard",
+    "Mountain Song": "Chant montagnard",
     "Mr. K.K.": "M. Kéké",
     "My Place": "Chez moi",
     "Neapolitan": "Napolitaine",
