Add missing element: On Rocks and Bushes (Rain)

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -26,6 +26,7 @@
     "Underground": "Sous terre",
     "Flying by Light": "Vol près de la lumière",
     "On Rocks (Rain)": "Sur les rochers (pluie)",
+    "On Rocks and Bushes (Rain)": "Sur les rochers et buissons (pluie)",
     "Shaking Trees": "Dans les arbres",
     "On the Ground": "Au sol",
     "On Beach Rocks": "Sur les rochers au bord de la mer",
