--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -26,6 +26,7 @@
     "Underground": "地中",
     "Flying by Light": "空中（外灯の近く）",
     "On Rocks (Rain)": "岩（雨天時）",
+    "On Rocks and Bushes (Rain)": "岩と低木（雨天時）",
     "Shaking Trees": "木（揺らす）",
     "On the Ground": "草地",
     "On Beach Rocks": "岩場",
