Fixed and added Spanish translations - Fixed Mahi-mahi translation - Added "On Rocks and Bushes (Rain)" - Added songs

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -26,6 +26,7 @@
     "Underground": "Debajo del suelo",
     "Flying by Light": "Volando cerca de la luz",
     "On Rocks (Rain)": "En rocas (lloviendo)",
+    "On Rocks and Bushes (Rain)": "En rocas y arbustos (lloviendo)",
     "Shaking Trees": "Agitando árboles",
     "On the Ground": "En el suelo",
     "On Beach Rocks": "En las rocas de la playa",
@@ -191,7 +192,7 @@
     "Tuna": "Atún",
     "Blue marlin": "Pez espada",
     "Giant trevally": "Jurel gigante",
-    "Mahi-mahi": "Mahi-mahi",
+    "Mahi-mahi": "Lampuga",
     "Ocean sunfish": "Pez luna",
     "Ray": "Raya",
     "Saw shark": "Pez sierra",
@@ -331,6 +332,105 @@
     "Rock-head statue": "Cabeza colosal",
     "Tremendous statue": "Urna imponente",
     "Valiant statue": "Estatua alada",
-    "Warrior statue": "Estatua guerrera"
+    "Warrior statue": "Estatua guerrera",
+    "Music": "Canciones",
+    "By concert request only": "Sólo por petición en un concierto",
+    "By concert request only (on birthday, or Saturday before)": "Sólo por petición en un concierto (en cumpleaños o el sábado anterior)",
+    "Gifted at first concert": "Regalado en el primer concierto",
+    "Agent K.K.": "Agente Totakeke",
+    "Aloha K.K.": "Tota-aloha",
+    "Animal City": "Ciudad animal",
+    "Bubblegum K.K.": "Tota-pop",
+    "Café K.K.": "Tota-café",
+    "Comrade K.K.": "Tota-camarada",
+    "DJ K.K.": "Tota-D.J.-Total",
+    "Drivin'": "Al volante",
+    "Farewell": "Despedida",
+    "Forest Life": "Forestal y tal",
+    "Go K.K. Rider": "Llanero Tota",
+    "Hypno K.K.": "Mírame a los ojos",
+    "I Love You": "Te quiero",
+    "Imperial K.K.": "Tota-imperio",
+    "K.K. Adventure": "Tota-banda sonora",
+    "K.K. Aria": "Tota-aria",
+    "K.K. Ballad": "Tota-balada",
+    "K.K. Bazaar": "Tota-bazar",
+    "K.K. Birthday": "Feliz en tu día",
+    "K.K. Blues": "Tota-blues",
+    "K.K. Bossa": "Tota-bossa nova",
+    "K.K. Calypso": "Tota-calipso",
+    "K.K. Casbah": "Tota-alcazaba",
+    "K.K. Chorale": "Tota-góspel",
+    "K.K. Condor": "Tota-andina",
+    "K.K. Country": "Tota-country",
+    "K.K. Cruisin'": "Tota-gánster",
+    "K.K. D&B": "Tota-drum&bass",
+    "K.K. Dirge": "Tota-réquiem",
+    "K.K. Disco": "Tota-disco",
+    "K.K. Dixie": "Tota-old-jazz",
+    "K.K. Étude": "Tota-solo",
+    "K.K. Faire": "Tota-romanza",
+    "K.K. Flamenco": "Tota-flamenco",
+    "K.K. Folk": "Tota-folk",
+    "K.K. Fusion": "Tota-fusión",
+    "K.K. Groove": "Tota-groove",
+    "K.K. Gumbo": "Tota-gumbo",
+    "K.K. House": "Tota-house",
+    "K.K. Island": "Mi isla, mi hogar",
+    "K.K. Jazz": "Tota-jazz",
+    "K.K. Jongara": "Tota-shamisen",
+    "K.K. Lament": "Tota-lamento",
+    "K.K. Love Song": "Tota-amor",
+    "K.K. Lullaby": "Tota-nana",
+    "K.K. Mambo": "Tota-mambo",
+    "K.K. Marathon": "Tota-maratón",
+    "K.K. March": "Tota-marcha",
+    "K.K. Mariachi": "Tota-mariachi",
+    "K.K. Metal": "Tota-metal",
+    "K.K. Milonga": "Tota-milonga",
+    "K.K. Moody": "Tota-bolero",
+    "K.K. Oasis": "Tota-marajá",
+    "K.K. Parade": "Tota-desfile",
+    "K.K. Ragtime": "Tota-ragtime",
+    "K.K. Rally": "Tota-parada",
+    "K.K. Reggae": "Tota-reggae",
+    "K.K. Rock": "Tota-rock",
+    "K.K. Rockabilly": "Tota-rockabilly",
+    "K.K. Safari": "Tota-safari",
+    "K.K. Salsa": "Tota-salsa",
+    "K.K. Samba": "Tota-samba",
+    "K.K. Ska": "Tota-ska",
+    "K.K. Sonata": "Tota-sonata",
+    "K.K. Song": "Tota-canción",
+    "K.K. Soul": "Tota-soul",
+    "K.K. Steppe": "Tota-estepa",
+    "K.K. Stroll": "Paseíto",
+    "K.K. Swing": "Tota-swing",
+    "K.K. Synth": "Tota-electrónica",
+    "K.K. Tango": "Tota-tango",
+    "K.K. Technopop": "Tota-tecno",
+    "K.K. Waltz": "Tota-vals",
+    "K.K. Western": "Tota-Oeste",
+    "King K.K.": "Rey Tota",
+    "Lucky K.K.": "Tota-celta",
+    "Marine Song 2001": "Tota 2001",
+    "Mountain Song": "Totalerileriló",
+    "Mr. K.K.": "Míster Totakeke",
+    "My Place": "Mi hogar",
+    "Neapolitan": "Napolitana",
+    "Only Me": "Solo yo",
+    "Pondering": "Sopesando",
+    "Rockin' K.K.": "Tota-total",
+    "Soulful K.K.": "Tota-lenta",
+    "Space K.K.": "Canción minimalista",
+    "Spring Blossoms": "Capullos en flor",
+    "Stale Cupcakes": "Pastelito seco",
+    "Steep Hill": "Colina arriba",
+    "Surfin' K.K.": "Tota-surf",
+    "The K. Funk": "Tota-funk",
+    "To the Edge": "Hasta el final",
+    "Two Days Ago": "Anteayer",
+    "Wandering": "Vagabundo",
+    "Welcome Horizons": "Nuevo horizonte"
   }
 }
