--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -26,6 +26,7 @@
     "Underground": "地中",
     "Flying by Light": "空中（外灯の近く）",
     "On Rocks (Rain)": "岩（雨天時）",
+    "On Rocks and Bushes (Rain)": "岩と低木（雨天時）",
     "Shaking Trees": "木（揺らす）",
     "On the Ground": "草地",
     "On Beach Rocks": "岩場",
@@ -331,6 +332,105 @@
     "Rock-head statue": "いしあたまなちょうこく",
     "Tremendous statue": "とてつもないちょうこく",
     "Valiant statue": "こうごうしいちょうこく",
-    "Warrior statue": "もののふのちょうこく"
+    "Warrior statue": "もののふのちょうこく",
+    "Music": "とたけけソング",
+    "By concert request only": "リクエストのみ",
+    "By concert request only (on birthday, or Saturday before)": "リクエストのみ（誕生日当日、または前週の土曜日）",
+    "Gifted at first concert": "とたけけの初来日",
+    "Agent K.K.": "けけけいじ",
+    "Aloha K.K.": "アロハけけ",
+    "Animal City": "どうぶつのまち",
+    "Bubblegum K.K.": "けけアイドル",
+    "Café K.K.": "けけパリ",
+    "Comrade K.K.": "しょうわけけかよう",
+    "DJ K.K.": "ユーロビート",
+    "Drivin'": "ドライブ",
+    "Farewell": "さよなら",
+    "Forest Life": "もりのせいかつ",
+    "Go K.K. Rider": "ゆけ！けけライダー",
+    "Hypno K.K.": "うたたねのゆめ",
+    "I Love You": "だいすき",
+    "Imperial K.K.": "けけチャイナ",
+    "K.K. Adventure": "けけハリウッド",
+    "K.K. Aria": "けけマリア",
+    "K.K. Ballad": "けけバラッド",
+    "K.K. Bazaar": "けけロマ",
+    "K.K. Birthday": "きみのたんじょうび",
+    "K.K. Blues": "けけブルース",
+    "K.K. Bossa": "けけボッサ",
+    "K.K. Calypso": "けけカリプソ",
+    "K.K. Casbah": "トルコそんぐ",
+    "K.K. Chorale": "けけさんびか",
+    "K.K. Condor": "ペルーのうた",
+    "K.K. Country": "けけカントリー",
+    "K.K. Cruisin'": "アーバンけけ",
+    "K.K. D&B": "ドラムンベース",
+    "K.K. Dirge": "こわいうた",
+    "K.K. Disco": "けけディスコ",
+    "K.K. Dixie": "けけディキシー",
+    "K.K. Étude": "けけのエチュード",
+    "K.K. Faire": "ハイサイけけ",
+    "K.K. Flamenco": "けけフラメンコ",
+    "K.K. Folk": "けけみんよう",
+    "K.K. Fusion": "けけフュージョン",
+    "K.K. Groove": "けけグルーヴ",
+    "K.K. Gumbo": "ニューオリンズそんぐ",
+    "K.K. House": "けけハウス",
+    "K.K. Island": "どうぶつのしま",
+    "K.K. Jazz": "けけジャズ",
+    "K.K. Jongara": "けけじょんがら",
+    "K.K. Lament": "けけえんか",
+    "K.K. Love Song": "けけラヴソング",
+    "K.K. Lullaby": "けけララバイ",
+    "K.K. Mambo": "けけマンボ",
+    "K.K. Marathon": "けけガムラン",
+    "K.K. March": "けけマーチ",
+    "K.K. Mariachi": "セニョールけけ",
+    "K.K. Metal": "けけメタル",
+    "K.K. Milonga": "けけのミロンガ",
+    "K.K. Moody": "けけボレロ",
+    "K.K. Oasis": "けけマハラジャ",
+    "K.K. Parade": "けけパレード",
+    "K.K. Ragtime": "ラグタイム",
+    "K.K. Rally": "けけおんど",
+    "K.K. Reggae": "けけレゲエ",
+    "K.K. Rock": "けけロック",
+    "K.K. Rockabilly": "けけビリー",
+    "K.K. Safari": "けけアフロ",
+    "K.K. Salsa": "けけサルサ",
+    "K.K. Samba": "けけサンバ",
+    "K.K. Ska": "けけスカ",
+    "K.K. Sonata": "けけのソナタ",
+    "K.K. Song": "けけソング",
+    "K.K. Soul": "けけソウル",
+    "K.K. Steppe": "コサックそんぐ",
+    "K.K. Stroll": "おさんぽ",
+    "K.K. Swing": "けけスウィング",
+    "K.K. Synth": "けけトロニカ",
+    "K.K. Tango": "けけタンゴ",
+    "K.K. Technopop": "テクノビート",
+    "K.K. Waltz": "けけワルツ",
+    "K.K. Western": "けけウェスタン",
+    "King K.K.": "けけだいみょう",
+    "Lucky K.K.": "アイリッシュそんぐ",
+    "Marine Song 2001": "ふなうた2001",
+    "Mountain Song": "アルペンそんぐ",
+    "Mr. K.K.": "けけせんせい",
+    "My Place": "ぼくのばしょ",
+    "Neapolitan": "ナポリタン",
+    "Only Me": "オンリーミー",
+    "Pondering": "かんがえちゅう",
+    "Rockin' K.K.": "けけのロケンロール",
+    "Soulful K.K.": "けけゴスペル",
+    "Space K.K.": "ミニマルおんがく",
+    "Spring Blossoms": "はるのこもれび",
+    "Stale Cupcakes": "ブルーおにぎり",
+    "Steep Hill": "にだんざか",
+    "Surfin' K.K.": "エレキそんぐ",
+    "The K. Funk": "けけファンク",
+    "To the Edge": "ナミナミ",
+    "Two Days Ago": "おととい",
+    "Wandering": "ほうろう",
+    "Welcome Horizons": "みんなあつまれ"
   }
 }
