--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -280,6 +280,149 @@
     "All Year": "Ganzjährig",
     "4 (Fin)": "4 (Flosse)",
     "6 (Fin)": "6 (Flosse)",
-    "Language Select": "Sprache: "
+    "Language Select": "Sprache: ",
+    "Art": "Kunstwerke",
+    "Academic painting": "Wissenschaftsgemälde",
+    "Amazing painting": "Enormgemälde",
+    "Basic painting": "Einfachgemälde",
+    "Calm painting": "Ruhegemälde",
+    "Common painting": "Bekanntgemälde",
+    "Dynamic painting": "Wellengemälde",
+    "Detailed painting": "Detailgemälde",
+    "Famous painting": "Berühmtgemälde",
+    "Glowing painting": "Lichtgemälde",
+    "Flowery painting": "Blumengemälde",
+    "Graceful painting": "Anmutsgemälde",
+    "Jolly painting": "Gemüsegemälde",
+    "Mysterious painting": "Rätselgemälde",
+    "Moody painting": "Kraftgemälde",
+    "Moving painting": "Schöngemälde",
+    "Nice painting": "Hübschgemälde",
+    "Perfect painting": "Perfektgemälde",
+    "Proper painting": "Strenggemälde",
+    "Quaint painting": "Altertumsgemälde",
+    "Scary painting": "Furchtgemälde",
+    "Scenic painting": "Wintergemälde",
+    "Serene painting": "Edelgemälde",
+    "Sinking painting": "Versinkgemälde",
+    "Solemn painting": "Feierlichgemälde",
+    "Twinkling painting": "Funkelgemälde",
+    "Warm painting": "Warmgemälde",
+    "Wild painting Left Half": "Ungestümgemälde (links)",
+    "Wild painting Right Half": "Ungestümgemälde (rechts)",
+    "Wistful painting": "Perlengemälde",
+    "Worthy painting": "Wahrgemälde",
+    "Ancient statue": "Uraltstatue",
+    "Beautiful statue": "Eleganzstatue",
+    "Familiar statue": "Vertrautstatue",
+    "Gallant statue": "Galantstatue",
+    "Great statue": "Würdestatue",
+    "Informative statue": "Hinweisskulptur",
+    "Motherly statue": "Wölfinnenstatue",
+    "Mystic statue": "Geheimnisbüste",
+    "Robust statue": "Athletenstatue",
+    "Rock-head statue": "Dickkopfskulptur",
+    "Tremendous statue": "Prachtskulptur",
+    "Valiant statue": "Erhabenstatue",
+    "Warrior statue": "Kriegerstatue",
+    "Music": "Musik",
+    "By concert request only": "Nur auf Konzertanfrage",
+    "By concert request only (on birthday, or Saturday before)": "Nur auf Konzertanfrage (Geburtstag oder Samstag davor)",
+    "Gifted at first concert": "Geschenk nach dem ersten Konzert",
+    "Agent K.K.": "Agent K.K.",
+    "Aloha K.K.": "K.K. Südseetraum",
+    "Animal City": "Die Stadt der Tiere",
+    "Bubblegum K.K.": "K.K. Pop",
+    "Café K.K.": "K.K. Kaffeeblues",
+    "Comrade K.K.": "K.K. Freundelied",
+    "DJ K.K.": "DJ K.K.",
+    "Drivin'": "Am Steuer",
+    "Farewell": "Abschied",
+    "Forest Life": "Waldlichtung",
+    "Go K.K. Rider": "Go K.K. Rider!",
+    "Hypno K.K.": "Schlummerlied",
+    "I Love You": "Ich liebe dich",
+    "Imperial K.K.": "Super-K.K.",
+    "K.K. Adventure": "K.K. Filmmusik",
+    "K.K. Aria": "K.K. Arie",
+    "K.K. Ballad": "K.K. Ballade",
+    "K.K. Bazaar": "K.K. Basar",
+    "K.K. Birthday": "Geburtstagslied",
+    "K.K. Blues": "K.K. Blues",
+    "K.K. Bossa": "K.K. Bossa",
+    "K.K. Calypso": "K.K. Calypso",
+    "K.K. Casbah": "K.K. Orientsong",
+    "K.K. Chorale": "K.K. Choral",
+    "K.K. Condor": "K.K. Kondor",
+    "K.K. Country": "K.K. Country",
+    "K.K. Cruisin'": "K.K. Cruisin'",
+    "K.K. D&B": "K.K. D & B",
+    "K.K. Dirge": "K.K. Trauerlied",
+    "K.K. Disco": "K.K. Disco",
+    "K.K. Dixie": "K.K. Dixie",
+    "K.K. Étude": "K.K. Etüde",
+    "K.K. Faire": "K.K. Jahrmarkt",
+    "K.K. Flamenco": "K.K. Flamenco",
+    "K.K. Folk": "K.K. Folk",
+    "K.K. Fusion": "K.K. Fusion",
+    "K.K. Groove": "K.K. Groove",
+    "K.K. Gumbo": "K.K. Gumbo",
+    "K.K. House": "K.K. House",
+    "K.K. Island": "Die Insel der Tiere",
+    "K.K. Jazz": "K.K. Jazz",
+    "K.K. Jongara": "K.K. Melodie",
+    "K.K. Lament": "K.K. Klagelied",
+    "K.K. Love Song": "K.K. Liebeslied",
+    "K.K. Lullaby": "K.K. Schlaflied",
+    "K.K. Mambo": "K.K. Mambo",
+    "K.K. Marathon": "K.K. Marathon",
+    "K.K. March": "K.K. Marsch",
+    "K.K. Mariachi": "K.K. Combo",
+    "K.K. Metal": "K.K. Metal",
+    "K.K. Milonga": "K.K. Milonga",
+    "K.K. Moody": "K.K. Sonnenuntergang",
+    "K.K. Oasis": "K.K. Maharadscha",
+    "K.K. Parade": "K.K. Parade",
+    "K.K. Ragtime": "K.K. Ragtime",
+    "K.K. Rally": "K.K. Parade 2",
+    "K.K. Reggae": "K.K. Reggae",
+    "K.K. Rock": "K.K. Rock",
+    "K.K. Rockabilly": "K.K. Rockabilly",
+    "K.K. Safari": "K.K. Safari",
+    "K.K. Salsa": "K.K. Salsa",
+    "K.K. Samba": "K.K. Samba",
+    "K.K. Ska": "K.K. Ska",
+    "K.K. Sonata": "K.K. Sonate",
+    "K.K. Song": "K.K. Song",
+    "K.K. Soul": "K.K. Soul",
+    "K.K. Steppe": "K.K. Steppensong",
+    "K.K. Stroll": "Spaziergang",
+    "K.K. Swing": "K.K. Swing",
+    "K.K. Synth": "K.K. Synthiepop",
+    "K.K. Tango": "K.K. Tango",
+    "K.K. Technopop": "K.K. Technopop",
+    "K.K. Waltz": "K.K. Walzer",
+    "K.K. Western": "K.K. Western",
+    "King K.K.": "King K.K.",
+    "Lucky K.K.": "K.K. Glückspilz",
+    "Marine Song 2001": "Seefahrerlied 2001",
+    "Mountain Song": "Berglied",
+    "Mr. K.K.": "Herr K.K.",
+    "My Place": "Mein Zuhause",
+    "Neapolitan": "Neapolitaner",
+    "Only Me": "Ganz allein",
+    "Pondering": "Nachdenklich",
+    "Rockin' K.K.": "K.K. Rocksong",
+    "Soulful K.K.": "K.K. mit Gefühl",
+    "Space K.K.": "Minimal Music",
+    "Spring Blossoms": "Frühlingsblüten",
+    "Stale Cupcakes": "Alter Kuchen",
+    "Steep Hill": "Bergsteigung",
+    "Surfin' K.K.": "Surfin' K.K.",
+    "The K. Funk": "K. Funk",
+    "To the Edge": "Am Rande",
+    "Two Days Ago": "Vorgestern",
+    "Wandering": "Ich wandere",
+    "Welcome Horizons": "Neue Horizonte"
   }
 }
