BUG FIX: fixing Birthday Song text to reflect actual gameplay

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -327,7 +327,7 @@
     "Warrior statue": "Kriegerstatue",
     "Music": "Musik",
     "By concert request only": "Nur auf Konzertanfrage",
-    "By concert request only (on birthday, or Saturday before)": "Nur auf Konzertanfrage (Geburtstag oder Samstag davor)",
+    "By concert request only (on birthday)": "Nur auf Konzertanfrage (an deinem Geburtstag)",
     "Gifted at first concert": "Geschenk nach dem ersten Konzert",
     "Agent K.K.": "Agent K.K.",
     "Aloha K.K.": "K.K. Südseetraum",
