--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -335,7 +335,7 @@
     "Warrior statue": "Estatua guerrera",
     "Music": "Canciones",
     "By concert request only": "Sólo por petición en un concierto",
-    "By concert request only (on birthday, or Saturday before)": "Sólo por petición en un concierto (en cumpleaños o el sábado anterior)",
+    "By concert request only (on birthday)": "Sólo por petición en un concierto (en su cumpleaños)",
     "Gifted at first concert": "Regalado en el primer concierto",
     "Agent K.K.": "Agente Totakeke",
     "Aloha K.K.": "Tota-aloha",
