--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -335,7 +335,7 @@
     "Warrior statue": "もののふのちょうこく",
     "Music": "とたけけソング",
     "By concert request only": "リクエストのみ",
-    "By concert request only (on birthday, or Saturday before)": "リクエストのみ（誕生日当日、または前週の土曜日）",
+    "By concert request only (on birthday)": "リクエストのみ（あなたの誕生日に）",
     "Gifted at first concert": "とたけけの初来日",
     "Agent K.K.": "けけけいじ",
     "Aloha K.K.": "アロハけけ",
