Fix birthday song text FR+JA

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -335,7 +335,7 @@
     "Warrior statue": "Statue guerrière",
     "Music": "Chansons",
     "By concert request only": "Sur demande de concert uniquement",
-    "By concert request only (on birthday)": "Sur demande de concert uniquement (pour ton anniversaire)",
+    "By concert request only (on birthday)": "Sur demande de concert uniquement (jour de l’anniversaire)",
     "Gifted at first concert": "Donné lors du premier concert",
     "Agent K.K.": "Agent Kéké",
     "Aloha K.K.": "Ukulélé Kéké",
