Added more Spanish translations (hamburger menu)

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -7,8 +7,16 @@
     "Obtained": "Obtenidos",
     "Already Caught": "Ya capturados",
     "Made By": "Hecho por <a href=\"http://sawyerhood.com\">Sawyer Hood</a> | Traducción de Javier Marina | ",
+    "Language": "Idioma",
+    "Hemisphere": "Hemisferio",
     "Northern": "Hemisferio norte",
     "Southern": "Hemisferio sur",
+    "Export Caught Items": "Exportar capturas",
+    "Copy to Clipboard": "Copiar al portapapeles",
+    "Copied!": "¡Copiado!",
+    "Import Caught Items": "Importar capturas",
+    "Paste Here": "Pegar aquí",
+    "Import": "Importar",
     "Fish": "Peces",
     "Bugs": "Insectos",
     "Fossils": "Fósiles",
