Fixed tiger shrimp kanji.

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -461,7 +461,7 @@
     "Red king crab": "タラバガニ",
     "Acorn barnacle": "どんぐりフジツボ",
     "Spider crab": "タカアシガニ",
-    "Tiger prawn": "車エビ",
+    "Tiger prawn": "車海老",
     "Sweet shrimp": "甘エビ",
     "Mantis shrimp": "シャコ",
     "Spiny lobster": "イセエビ",
