Added a dropped comma.

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -431,7 +431,7 @@
     "To the Edge": "ナミナミ",
     "Two Days Ago": "おととい",
     "Wandering": "ほうろう",
-    "Welcome Horizons": "みんなあつまれ"
+    "Welcome Horizons": "みんなあつまれ",
     "Seaweed": "ワカメ",
     "Sea grapes": "海ぶどう",
     "Sea cucumber": "ナマコ",
