Swapped JA quotation mark for proper EN one.

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -437,7 +437,7 @@
     "Sea cucumber": "ナマコ",
     "Sea pig": "センジュナマコ",
     "Sea star": "ヒトデ",
-    "Sea urchin": "ウニ”,
+    "Sea urchin": "ウニ",
     "Slate pencil urchin": "パイプウニ",
     "Sea anemone": "イソギンチャク",
     "Moon jellyfish": "ミズクラゲ",
