JA Translations for Sea Creatures (#40)
* Add JA sea creature translations.

* Fixed tiger shrimp kanji.

* Added a dropped comma.

* Swapped JA quotation mark for proper EN one.

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -431,6 +431,46 @@
     "To the Edge": "ナミナミ",
     "Two Days Ago": "おととい",
     "Wandering": "ほうろう",
-    "Welcome Horizons": "みんなあつまれ"
+    "Welcome Horizons": "みんなあつまれ",
+    "Seaweed": "ワカメ",
+    "Sea grapes": "海ぶどう",
+    "Sea cucumber": "ナマコ",
+    "Sea pig": "センジュナマコ",
+    "Sea star": "ヒトデ",
+    "Sea urchin": "ウニ",
+    "Slate pencil urchin": "パイプウニ",
+    "Sea anemone": "イソギンチャク",
+    "Moon jellyfish": "ミズクラゲ",
+    "Sea slug": "ウミウシ",
+    "Pearl oyster": "アコヤガイ",
+    "Mussel": "イガイ",
+    "Oyster": "カキ",
+    "Scallop": "ホタテ",
+    "Whelk": "ツブ",
+    "Turban shell": "サザエ",
+    "Abalone": "アワビ",
+    "Gigas giant clam": "オオシャコガイ",
+    "Chambered nautilus": "オウムガイ",
+    "Octopus": "タコ",
+    "Umbrella octopus": "メンダコ",
+    "Vampire squid": "コウモリダコ",
+    "Firefly squid": "ホタルイカ",
+    "Gazami crab": "ガザミ",
+    "Dungeness crab": "ダンジェネスクラブ",
+    "Snow crab": "ズワイガニ",
+    "Red king crab": "タラバガニ",
+    "Acorn barnacle": "どんぐりフジツボ",
+    "Spider crab": "タカアシガニ",
+    "Tiger prawn": "車海老",
+    "Sweet shrimp": "甘エビ",
+    "Mantis shrimp": "シャコ",
+    "Spiny lobster": "イセエビ",
+    "Lobster": "ロブスター",
+    "Giant isopod": "ダイオウグソクムシ",
+    "Horseshoe crab": "カブトガニ",
+    "Sea pineapple": "ホヤ",
+    "Spotted garden eel": "チンアナゴ",
+    "Flatform": "ヒラムシ",
+    "Venus' flower basket": "カイロウドウケツ"
   }
 }
