--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -423,6 +423,47 @@
     "To the Edge": "Am Rande",
     "Two Days Ago": "Vorgestern",
     "Wandering": "Ich wandere",
-    "Welcome Horizons": "Neue Horizonte"
+    "Welcome Horizons": "Neue Horizonte",
+    "Sea Creatures": "Meerestiere",
+    "Seaweed": "Wakame-Alge",
+    "Sea grapes": "Kriechsprossalge",
+    "Sea cucumber": "Seegurke",
+    "Sea pig": "Scotoplanes",
+    "Sea star": "Seestern",
+    "Sea urchin": "Seeigel",
+    "Slate pencil urchin": "Griffelseeigel",
+    "Sea anemone": "Seeanemone",
+    "Moon jellyfish": "Ohrenqualle",
+    "Sea slug": "Nacktkiemer",
+    "Pearl oyster": "Perlmuschel",
+    "Mussel": "Miesmuschel",
+    "Oyster": "Auster",
+    "Scallop": "Kammmuschel",
+    "Whelk": "Babylon-Seeschnecke",
+    "Turban shell": "Turbanschnecke",
+    "Abalone": "Seeohr",
+    "Gigas giant clam": "Gigas-Riesenmuschel",
+    "Chambered nautilus": "Perlboot",
+    "Octopus": "Oktopus",
+    "Umbrella octopus": "Regenschirm-Oktopus",
+    "Vampire squid": "Vampirtintenfisch",
+    "Firefly squid": "Leuchtkalmar",
+    "Gazami crab": "Gazami-Krabbe",
+    "Dungeness crab": "Pazifik-Taschenkrebs",
+    "Snow crab": "Schneekrabbe",
+    "Red king crab": "Königskrabbe",
+    "Acorn barnacle": "Seepocke",
+    "Spider crab": "Riesenkrabbe",
+    "Tiger prawn": "Kuruma-Garnele",
+    "Sweet shrimp": "Botan-Garnele",
+    "Mantis shrimp": "Fangschreckenkrebs",
+    "Spiny lobster": "Languste",
+    "Lobster": "Hummer",
+    "Giant isopod": "Riesenassel",
+    "Horseshoe crab": "Pfeilschwanzkrebs",
+    "Sea pineapple": "Seeananas",
+    "Spotted garden eel": "Röhrenaal",
+    "Flatform": "Meerstrudelwurm",
+    "Venus' flower basket": "Gießkannenschwamm"
   }
 }
