Added sea creatures in Spanish

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -439,6 +439,59 @@
     "To the Edge": "Hasta el final",
     "Two Days Ago": "Anteayer",
     "Wandering": "Vagabundo",
-    "Welcome Horizons": "Nuevo horizonte"
+    "Welcome Horizons": "Nuevo horizonte",
+    "Sea Creatures": "Criaturas marinas",
+    "Stationary": "Quieto",
+    "Quick": "Rápido",
+    "Slow": "Lento",
+    "Moderate Consistent Movement": "Movimiento uniforme moderado",
+    "Medium Consistent Movement": "Movimiento uniforme medio",
+    "Slow Consistent Movement": "Movimiento uniforme lento",
+    "Quick Short Lunges": "Impulsos rápidos y cortos",
+    "Quick Long Lunges": "Impulsos rápidos y largos",
+    "Moderate Long Lunges": "Impulsos largos",
+    "Slow Long Lunges": "Impulsos lentos y largos",
+    "Slow Short Lunges": "Impulsos lentos y cortos",
+    "Slow Short Movement": "Movimientos lentos y cortos",
+    "Seaweed": "Alga wakame",
+    "Sea grapes": "Uva de mar",
+    "Sea cucumber": "Pepino de mar",
+    "Sea pig": "Cerdo de mar",
+    "Sea star": "Estrella de mar",
+    "Sea urchin": "Erizo de mar",
+    "Slate pencil urchin": "Erizo lápiz de pizarra",
+    "Sea anemone": "Anémona",
+    "Moon jellyfish": "Medusa luna",
+    "Sea slug": "Babosa de mar",
+    "Pearl oyster": "Ostra perlera",
+    "Mussel": "Mejillón",
+    "Oyster": "Ostra",
+    "Scallop": "Vieira",
+    "Whelk": "Buccino",
+    "Turban shell": "Caracola espinosa",
+    "Abalone": "Abulón",
+    "Gigas giant clam": "Taclobo gigante",
+    "Chambered nautilus": "Nautilo",
+    "Octopus": "Pulpo",
+    "Umbrella octopus": "Pulpo paraguas",
+    "Vampire squid": "Calamar vampiro",
+    "Firefly squid": "Calamar luciérnaga",
+    "Gazami crab": "Cangrejo gazami",
+    "Dungeness crab": "Buey del Pacífico",
+    "Snow crab": "Cangrejo de nieve",
+    "Red king crab": "Cangrejo boreal",
+    "Acorn barnacle": "Bellota de mar",
+    "Spider crab": "Cangrejo gigante japonés",
+    "Tiger prawn": "Langostino tigre",
+    "Sweet shrimp": "Camarón boreal",
+    "Mantis shrimp": "Langosta mantis",
+    "Spiny lobster": "Langosta espinosa",
+    "Lobster": "Bogavante",
+    "Giant isopod": "Isópodo gigante",
+    "Horseshoe crab": "Cangrejo herradura",
+    "Sea pineapple": "Piña de mar",
+    "Spotted garden eel": "Anguila jardinera",
+    "Flatworm": "Gusano políclado",
+    "Venus' flower basket": "Canasta de flores de Venus"
   }
 }
