Update FR + JA translations (Fix #39)

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -431,6 +431,58 @@
     "To the Edge": "Limite",
     "Two Days Ago": "2 jours plus tôt",
     "Wandering": "Errance",
-    "Welcome Horizons": "Horizons nouveaux"
+    "Welcome Horizons": "Horizons nouveaux",
+    "Sea Creatures": "Créatures marines",
+    "Seaweed": "Wakame",
+    "Sea grapes": "Algue raisin de mer",
+    "Sea cucumber": "Concombre de mer",
+    "Sea pig": "Cochon de mer",
+    "Sea star": "Étoile de mer",
+    "Sea urchin": "Oursin",
+    "Slate pencil urchin": "Oursin crayon",
+    "Sea anemone": "Anémone de mer",
+    "Moon jellyfish": "Méduse lune",
+    "Sea slug": "Limace de mer",
+    "Pearl oyster": "Huître perlière",
+    "Mussel": "Moule",
+    "Oyster": "Huître",
+    "Scallop": "Pétoncle",
+    "Whelk": "Bulot",
+    "Turban shell": "Turbo",
+    "Abalone": "Ormeau",
+    "Gigas giant clam": "Bénitier colossal",
+    "Chambered nautilus": "Nautile",
+    "Octopus": "Poulpe",
+    "Umbrella octopus": "Pieuvre parapluie",
+    "Vampire squid": "Vampire des abysses",
+    "Firefly squid": "Calmar luciole",
+    "Gazami crab": "Crabe Gazami",
+    "Dungeness crab": "Crabe de Dungeness",
+    "Snow crab": "Crabe des neiges",
+    "Red king crab": "Crabe royal",
+    "Acorn barnacle": "Balane",
+    "Spider crab": "Crabe-araignée géant",
+    "Tiger prawn": "Crevette tigrée",
+    "Sweet shrimp": "Crevette nordique",
+    "Mantis shrimp": "Crevette-mante",
+    "Spiny lobster": "Langouste",
+    "Lobster": "Homard",
+    "Giant isopod": "Bathynome géant",
+    "Horseshoe Crab": "Limule",
+    "Sea pineapple": "Halocynthia roretzi",
+    "Spotted garden eel": "Anguille de jardin",
+    "Flatworm": "Ver plat",
+    "Venus' flower basket": "Corbeille de Vénus",
+    "Stationary": "Immobile",
+    "Slow Short Lunges": "Impulsions lentes et courtes",
+    "Slow Long Lunges": "Impulsions lentes et longues",
+    "Moderate Long Lunges": "Impulsions modérées et longues",
+    "Quick Short Lunges": "Impulsions rapides et courtes",
+    "Quick Long Lunges": "Impulsions rapides et longues",
+    "Slow Consistent Movement": "Mouvement lent uniforme",
+    "Medium Consistent Movement": "Mouvement intérmédiaire uniforme",
+    "Moderate Consistent Movement": "Mouvement modéré uniforme",
+    "Slow": "Lent",
+    "Quick": "Rapide"
   }
 }
