--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -432,8 +432,9 @@
     "Two Days Ago": "おととい",
     "Wandering": "ほうろう",
     "Welcome Horizons": "みんなあつまれ",
+    "Sea Creatures": "海の幸",
     "Seaweed": "ワカメ",
-    "Sea grapes": "海ぶどう",
+    "Sea grapes": "ウミブドウ",
     "Sea cucumber": "ナマコ",
     "Sea pig": "センジュナマコ",
     "Sea star": "ヒトデ",
@@ -443,10 +444,10 @@
     "Moon jellyfish": "ミズクラゲ",
     "Sea slug": "ウミウシ",
     "Pearl oyster": "アコヤガイ",
-    "Mussel": "イガイ",
-    "Oyster": "カキ",
+    "Mussel": "ムールガイ",
+    "Oyster": "オイスター",
     "Scallop": "ホタテ",
-    "Whelk": "ツブ",
+    "Whelk": "バイガイ",
     "Turban shell": "サザエ",
     "Abalone": "アワビ",
     "Gigas giant clam": "オオシャコガイ",
@@ -456,21 +457,32 @@
     "Vampire squid": "コウモリダコ",
     "Firefly squid": "ホタルイカ",
     "Gazami crab": "ガザミ",
-    "Dungeness crab": "ダンジェネスクラブ",
+    "Dungeness crab": "ダンジネスクラブ",
     "Snow crab": "ズワイガニ",
     "Red king crab": "タラバガニ",
-    "Acorn barnacle": "どんぐりフジツボ",
+    "Acorn barnacle": "フジツボ",
     "Spider crab": "タカアシガニ",
-    "Tiger prawn": "車海老",
-    "Sweet shrimp": "甘エビ",
+    "Tiger prawn": "クルマエビ",
+    "Sweet shrimp": "アマエビ",
     "Mantis shrimp": "シャコ",
     "Spiny lobster": "イセエビ",
     "Lobster": "ロブスター",
     "Giant isopod": "ダイオウグソクムシ",
-    "Horseshoe crab": "カブトガニ",
+    "Horseshoe Crab": "カブトガニ",
     "Sea pineapple": "ホヤ",
     "Spotted garden eel": "チンアナゴ",
-    "Flatform": "ヒラムシ",
-    "Venus' flower basket": "カイロウドウケツ"
+    "Flatworm": "ヒラムシ",
+    "Venus' flower basket": "カイロウドウケツ",
+    "Stationary": "不動",
+    "Slow Short Lunges": "遅い（短いパルス）",
+    "Slow Long Lunges": "遅い（長いパルス）",
+    "Moderate Long Lunges": "並（長いパルス）",
+    "Quick Short Lunges": "速い（短いパルス）",
+    "Quick Long Lunges": "速い（長いパルス）",
+    "Slow Consistent Movement": "遅い（なめらか）",
+    "Medium Consistent Movement": "並（なめらか）",
+    "Moderate Consistent Movement": "並（なめらか）",
+    "Slow": "遅い",
+    "Quick": "速い"
   }
 }
