Add missing elements

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,5 +1,11 @@
 {
   "translations": {
+    "Language": "Langue",
+    "Hemisphere": "Hémisphere",
+    "Export Caught Items": "Exporter les éléments obtenus",
+    "Copy to Clipboard": "Copier dans le presse-papier",
+    "Import Caught Items": "Importer les éléments obtenus",
+    "Paste Here": "Coller ici",
     "Not Yet Obtained": "Pas encore obtenu",
     "Available Now": "Disponible maintenant",
     "Available This Month": "Disponible ce mois-ci",
@@ -482,6 +488,7 @@
     "Slow Consistent Movement": "Mouvement lent uniforme",
     "Medium Consistent Movement": "Mouvement intérmédiaire uniforme",
     "Moderate Consistent Movement": "Mouvement modéré uniforme",
+    "Slow Short Movement": "Mouvement lent et court",
     "Slow": "Lent",
     "Quick": "Rapide"
   }
