Add one more element (Copied!)

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -6,6 +6,7 @@
     "Copy to Clipboard": "Copier dans le presse-papier",
     "Import Caught Items": "Importer les éléments obtenus",
     "Paste Here": "Coller ici",
+    "Copied!": "Copié !",
     "Not Yet Obtained": "Pas encore obtenu",
     "Available Now": "Disponible maintenant",
     "Available This Month": "Disponible ce mois-ci",
