--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -3,9 +3,10 @@
     "Language": "言語",
     "Hemisphere": "半球",
     "Export Caught Items": "取得済みのエキスポート",
-    "Copy to Clipboard": "クリップボードへコピー",
+    "Copy to Clipboard": "クリップボードへコピーする",
     "Import Caught Items": "取得済みのインポート",
     "Paste Here": "ここに貼り付ける",
+    "Copied!": "コピーしました！",
     "Not Yet Obtained": "未取得",
     "Available Now": "出現中",
     "Available This Month": "今月出現する",
